Test using module path