@@ -197,7 +197,8 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
-          <useModulePath>false</useModulePath>
+          <!-- Allow JUnit to access the test classes -->
+          <argLine>--add-opens com.github.robtimus.os.windows.registry/com.github.robtimus.os.windows.registry=ALL-UNNAMED</argLine>
         </configuration>
       </plugin>
 
